# izrss

./: .gitignore  .goreleaser.yaml  Cargo.toml  README.md  default.nix  example.toml  flake.nix  go.mod  go.sum  main.go  shell.nix
.github/: dependabot.yaml
.github/assets/: demo.tape
.github/workflows/: lint.yaml  release.yaml
cmd/: content.go  context.go  help.go  keys.go  lipgloss.go  load.go  main.go  mainModal.go  modal.go  modalHelpers.go  reading.go  readingModal.go  render.go  view.go
internal/config/: config.go  config_test.go
internal/rss/: rss.go  rss_test.go
internal/storage/: database.go  database_test.go
internal/ui/: commands.go  context.go  help.go  keys.go  load.go  load_test.go  model.go  render.go  styles.go  view.go
lib/: config.go  feeds.go  feeds_test.go  fetch.go  helpers.go  logger.go  render.go  state.go  style.go  types.go
lib/cache/: cache.go
nix/: default.nix  hm-module.nix  package.nix  shell.nix
src/: backend.rs  config.rs  feeds.rs  main.rs  reader.rs  state.rs  tui.rs
