[package]
name = "izrss"
version = "0.3.0"
license = "MIT"
description = "A RSS feed reader for the terminal"
homepage = "https://github.com/isabelross/izrss"
authors = ["isabel roses <isabel@isabelroses.com>"]
edition = "2024"

[dependencies]
anyhow = "1.0.98"
crossterm = "0.29.0"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.22", features = ["json"] }
tokio = { version = "1.46.1", features = ["full"] }
sha2 = "0.10.9"
hex = "0.4.3"
futures = "0.3.31"
toml = "0.9.2"
user_dirs = "0.2.0"
feed-rs = "2.3.1"
tui-markdown = "0.3.5"
html2md = "0.2.15"
